vibe: reserved event
